--- a/src/components/UI/Input/Input.scss
+++ b/src/components/UI/Input/Input.scss
@@ -2,46 +2,44 @@
   font-family: inherit;
   font-size: 0.8rem;
   color: inherit;
-  padding: 1rem 1.5rem;
+  padding: 1rem 1rem 1rem 4rem;
   border-radius: 3px;
   background-color: rgba(white, 0.5);
-  border: 2px solid var(--light-grey);
-  // border-bottom: 2px dotted var(--primary-yellow);
+  border: 1.5px solid var(--light-grey);
   width: 100%;
   display: block;
   transition: all 0.3s;
-
+  position: relative;
+  margin-top: 3rem;
+  
   &:focus {
     position: relative;
     outline: none;
     box-shadow: 0 1rem 2rem rgba(grey, 0.3);
-    border: 2px solid var(--primary-blue);
+    border: 1.5px solid var(--primary-blue);
   }
 
   &:focus:invalid {
+    border: 1.5px solid red;
+  }
+
+  &:invalid {
     border-left: 4px solid red;
+  }
+
+  &::placeholder {
+    color: var(--dark-grey);
   }
 
   &::-webkit-input-placeholder {
     color: var(--dark-grey);
   }
-
-  //   &:focus:before{
-  //       content:'';
-  //       width: 1rem;
-  //       height: 2rem;
-  //       position: absolute;
-  //       background-color: var(--primary-blue);
-  //   }
 }
 
-.input-group {
-//   position: absolute;
-}
 
 .label {
   position: absolute;
-//   font-size: 0.6rem;
+  //   font-size: 0.6rem;
   left: 1.5rem;
   top: -1rem;
   border-radius: 3px;
@@ -55,4 +53,20 @@
   opacity: 0;
   visibility: hidden;
   transform: translateY(1rem);
+}
+
+.input-icon {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left:0;
+  margin: auto 10px;
+
+  font-size: 2rem;
+  fill: lightgray;
+}
+
+.text-danger{
+  color:var(--danger-red);
+  float: left;
 }
