--- a/src/components/Auth/AccountType/AccountType.scss
+++ b/src/components/Auth/AccountType/AccountType.scss
@@ -1,9 +1,9 @@
 .account-type {
-  border: 1px solid lighten(#30a5e9, 30%);
+  border: 1px solid var(--light-grey);
   border-radius: 3px;
 
-  margin-bottom: 1rem;
-  padding: 1.5rem;
+  margin-bottom: 2rem;
+  padding: 2.5rem;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -11,7 +11,11 @@
   flex: 0 0 45%;
   width: 13rem;
   height: 13rem;
-  
+  position: relative;
+}
+
+.selected-type {
+  border: 1px solid lighten(#30a5e9, 30%);
 }
 
 .account-img-box {
@@ -20,4 +24,31 @@
 
 .account-img {
   width: 95%;
+}
+
+.account-text{
+  text-transform: capitalize;
+}
+
+.circle {
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 50%;
+  background-color: var(--primary-blue);
+  position: absolute;
+  right: -1rem;
+  bottom: -1rem;
+  box-shadow: 0.3rem 0.3rem 0.5rem rgba(#30a5e9, 0.3);
+
+  .checkmark {
+    width: 0.6rem;
+    height: 1.3rem;
+    position: absolute;
+    top: 0.4rem;
+    right: 0.9rem;
+
+    border-right: 2px solid var(--white);
+    border-bottom: 2px solid var(--white);
+    transform: rotate(45deg);
+  }
 }
