--- a/src/components/Auth/Login/Login.scss
+++ b/src/components/Auth/Login/Login.scss
@@ -9,7 +9,7 @@
   padding: 2rem;
   box-shadow: 0 4px 10px 4px rgba(#000, 0.1);
   border-radius: 5px;
-  @media only screen and (max-width: $sz-small) {
+  @media only screen and (max-width: $sz-xsmall) {
     height: 100vh;
     margin: 0;
   }
