--- a/src/components/Auth/Login/Login.scss
+++ b/src/components/Auth/Login/Login.scss
@@ -11,7 +11,7 @@
   border-radius: 5px;
   @media only screen and (max-width: $sz-xsmall) {
     height: 100vh;
-    margin: 0;
+    margin: 0 auto;
   }
 
   background: url(../../../assets/images/img_town_370x170@3x.svg);
