--- a/src/components/Auth/Login/Login.scss
+++ b/src/components/Auth/Login/Login.scss
@@ -5,21 +5,30 @@
   max-width: var(--max-width);
   width: 100%;
   background-color: var(--white);
-  margin: 4rem auto;
+  margin: 3rem auto;
   padding: 2rem;
-//   box-shadow: 0 4px 10px 4px rgba(#000, 0.1);
+  box-shadow: 0 4px 10px 4px rgba(#000, 0.1);
   border-radius: 5px;
-  @media only screen and (max-width: $sz-xsmall) {
+  z-index: 0;
+  @media only screen and (max-width: $sz-small) {
     height: 100vh;
-    margin: auto 0;
+    margin: 0 auto;
   }
 
-  background: url(../../../assets/images/img_town_370x170@3x.svg);
-  background-attachment: fixed;
-  background-position: bottom;
-  background-repeat: no-repeat;
 }
 
+.bg-img {
+  //   background: url(../../../assets/images/img_town_370x170@3x.svg);
+  //   background-attachment: fixed;
+  //   background-position: bottom;
+  //   background-size: cover;
+  width: 100%;
+  height: auto;
+  left: 0;
+  bottom: 0;
+  position: fixed;
+  z-index: -1;
+}
 
 .greetings {
   color: var(--dark-grey);
